--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -95,8 +95,22 @@ nav li {
 	font-size: 1.2em;
 }
 
+nav a {
+	text-decoration: none;
+	color: black;
+}
+
+nav a .active{
+	font-weight: 700;
+}
+
 li:hover {
 	color: #B1663C;
+}
+
+nav li img {
+	height: 22px;
+	display: flex;
 }
 #introduction {
 	display: flex;
@@ -215,3 +229,53 @@ footer nav ul {
 	margin: 2em
 }
 
+/* Log in */
+
+#connexion {
+	display: grid;
+	justify-content: center;
+	gap: 20px;
+}
+
+#connexion h2 {
+	font-size: 30px;
+	display: flex;
+	justify-content: center;
+}
+
+#connexion form {
+	position: relative;
+}
+
+.mail , .password {
+	display: flex;
+	flex-direction: column;
+	margin-top: 20px;
+}
+
+form , label {
+	font-size: 14px;
+	font-weight: 500;
+	padding: 0px 10px 10px 0px;
+}
+
+.mail .password , input {
+	min-width: 20vw;
+	min-height: 50px;
+	border: none;
+	box-shadow: 0px 4px 14px 0px #00000017;
+}
+
+.forget {
+	display: flex;
+	justify-content: center;
+}
+
+.forget {
+	font-size: 14px;
+	color: black;
+}
+
+.btn-connexion:hover input {
+	background-color:#0E2F28;
+}
