modalfinit sans la possibilité de supprimer ou ajouter des images

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -349,6 +349,14 @@ form , label {
 	font-size: 9px;
 }
 
+.btn-back {
+	width: 22px;
+	height: 22px;
+	position: absolute;
+	top: 26px;
+	left: 30px;
+}
+
 .modal-title,
 .modal-upload-title {
 	color: #000;
@@ -402,6 +410,110 @@ form , label {
 }
 
 .btn-modal {
+	background-color: transparent;
+	border: #1D6154 1px solid;
+	border-radius: 60px;
+	padding: 10px;
+	min-width: 100px;
+	font-weight: 700;
+	font-size: 16px;
+	color: #1D6154;
+	cursor: pointer;
+}
+
+/* section upload image */
+
+#addImgForm .img-form {
+	margin-top: 46px;
+	width: 420px;
+	display: flex;
+	flex-direction: column;
+}
+
+.img-upload {
+	display: flex;
+	gap: 7px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 420px;
+	height: 169px;
+	flex-shrink: 0;
+	border-radius: 3px;
+	background: #E8F1F6;
+}
+
+.img-upload .imgIcon {
+	font-size: 68px;
+	color: #B9C5CC;
+}
+
+.preview-img {
+	display: none;
+	height: 100%;
+}
+
+.btn-upload {
+	width: auto !important;
+	border-radius: 50px;
+	background: #CBD6DC;
+	padding: 10px 33px;
+	text-align: center;
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	z-index: 3;
+	white-space: nowrap;
+}
+
+.btn-upload input {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 105%;
+	cursor: pointer;
+	opacity: 0;
+}
+
+.upload-text {
+	color: #444;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 10px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.img-form input,
+.img-form select {
+	background-color: white;
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+.img-form hr {
+	display: block;
+	height: 1px;
+	background-color: #B3B3B3;
+	border: none;
+	margin-bottom: 38px;
+}
+
+#addImgForm label {
+	text-align: start;
+	margin: 2em 0 1em 0;
+}
+
+#addImgForm hr {
+	margin: 0px;
+	margin-top: 47px;
+}
+
+.modal-img-button {
 	background-color: transparent;
 	border: #1D6154 1px solid;
 	border-radius: 60px;
