--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -198,11 +198,11 @@ nav li img {
 
 .gallery img {
 	width: 100%;
-
+	max-height: 480px;
 }
 #contact {
 	width: 50%;
-margin: auto;
+    margin: auto;
 }
 #contact > * {
 	text-align: center;
@@ -486,7 +486,7 @@ form , label {
 	line-height: normal;
 }
 
-.img-form input,
+
 .img-form select {
 	background-color: white;
 	height: 50px;
@@ -514,13 +514,15 @@ form , label {
 }
 
 .modal-img-button {
-	background-color: transparent;
-	border: #1D6154 1px solid;
 	border-radius: 60px;
 	padding: 10px;
-	min-width: 100px;
+	width: 240px !important;
+	height: 35px;
 	font-weight: 700;
 	font-size: 16px;
 	color: #1D6154;
 	cursor: pointer;
+	background: #0000004D !important;
 }
+
+/* Responsive du site */
