--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -100,12 +100,16 @@ nav a {
 	color: black;
 }
 
-nav a .active{
+nav li.active{
 	font-weight: 700;
 }
 
-li:hover {
+li a:hover {
 	color: #B1663C;
+}
+
+.login-button, .logout-button {
+	cursor: pointer;
 }
 
 nav li img {
@@ -232,21 +236,37 @@ nav li img {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+.btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
-	background-color: #1D6154;
 	margin : 2em auto ;
-	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	height: 35px;
+	border: none;
+	cursor: pointer;
+	background-color: #1D6154;
+	line-height: 0;
+}
+
+.btn:hover {
+	background-color:#0E2F28;
+}
+
+.footer {
+	position: fixed;
+	bottom: 0;
+	right: 0;
 }
 
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em 5em
 }
 
 /* Log in */
@@ -254,13 +274,15 @@ footer nav ul {
 #connexion {
 	display: grid;
 	justify-content: center;
-	gap: 20px;
+	height:60vh;
 }
 
 #connexion h2 {
 	font-size: 30px;
 	display: flex;
 	justify-content: center;
+	align-items: end;
+	margin-bottom: 20px;
 }
 
 #connexion form {
@@ -279,27 +301,23 @@ form , label {
 	padding: 0px 10px 10px 0px;
 }
 
-.mail .password , input {
+.mail .password , input[type=text], input[type=email], input[type=password] {
 	min-width: 20vw;
 	min-height: 50px;
 	border: none;
 	box-shadow: 0px 4px 14px 0px #00000017;
 }
 
+.btn-connexion .submit-login {
+	width: 180px;
+}
+
 .forget {
 	display: flex;
 	justify-content: center;
-}
-
-.forget {
 	font-size: 14px;
 	color: black;
 }
-
-.btn-connexion:hover input {
-	background-color:#0E2F28;
-}
-
 
 /****** MODAL ******/
 
@@ -355,6 +373,7 @@ form , label {
 	position: absolute;
 	top: 26px;
 	left: 30px;
+	cursor: pointer;
 }
 
 .modal-title,
@@ -410,15 +429,9 @@ form , label {
 }
 
 .btn-modal {
-	background-color: transparent;
-	border: #1D6154 1px solid;
-	border-radius: 60px;
-	padding: 10px;
-	min-width: 100px;
-	font-weight: 700;
-	font-size: 16px;
-	color: #1D6154;
-	cursor: pointer;
+	background-color: #1D6154;
+	color: #ffffff;
+	width: 240px;
 }
 
 /* section upload image */
@@ -514,15 +527,9 @@ form , label {
 }
 
 .modal-img-button {
-	border-radius: 60px;
 	padding: 10px;
-	width: 240px !important;
-	height: 35px;
-	font-weight: 700;
+	width: 240px;
 	font-size: 16px;
-	color: #1D6154;
 	cursor: pointer;
-	background: #0000004D !important;
+	background: #0000004D;
 }
-
-/* Responsive du site */
